--- a/backend/mock-api/package.json
+++ b/backend/mock-api/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest"
+    "test": "jest",
+    "generate-data": "node generate-data.js",
+    "test-api": "node test-api.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "faker": "^5.5.3",
