Fixed refresh token for jwt and production api developing yeay

--- a/backend/production-api/env.example
+++ b/backend/production-api/env.example
@@ -9,6 +9,8 @@ DB_PORT=5432
 DB_NAME=securedoor
 DB_USERNAME=postgres
 DB_PASSWORD=
+DB_SSL=false
+
 
 # JWT Configuration
 JWT_SECRET=your-secret-key-change-in-production-min-32-chars
