--- a/backend/production-api/config/config.json
+++ b/backend/production-api/config/config.json
@@ -16,7 +16,10 @@
     "logging": false
   },
   "production": {
-    "use_env_variable": "DATABASE_URL",
+    "username": "postgres",
+    "password": null,
+    "database": "securedoor",
+    "host": "127.0.0.1",
     "dialect": "postgres",
     "logging": false,
     "ssl": true,
