--- a/android-app/core-features/app/src/main/AndroidManifest.xml
+++ b/android-app/core-features/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <application
         android:name=".SecureDoorApplication"
         android:allowBackup="true"
@@ -31,6 +33,14 @@
             android:label="Dashboard"
             android:theme="@style/Theme.SecureDoor"
             android:configChanges="keyboardHidden|orientation|screenSize" />
+
+        <service
+            android:name="com.authentic.smartdoor.notifications.SmartDoorMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
