--- a/backend/production-api/env.example
+++ b/backend/production-api/env.example
@@ -36,3 +36,6 @@ LOG_TO_FILE=false
 # SSL_KEY_PATH=/path/to/ssl/key.pem
 # SSL_CERT_PATH=/path/to/ssl/cert.pem
 
+# Firebase Admin
+# FIREBASE_CREDENTIALS_PATH=/absolute/path/to/firebase-service-account.json
+
