--- a/backend/production-api/package.json
+++ b/backend/production-api/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "firebase-admin": "^12.0.0",
     "google-auth-library": "^9.8.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
